Bug 127237 - FileOpen: PPTX Shading - Table Background color missing in Impress
Summary: FileOpen: PPTX Shading - Table Background color missing in Impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-30 08:55 UTC by nd101
Modified: 2020-09-23 01:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PPTX document (33.38 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-08-30 08:57 UTC, nd101
Details
How it looks in Impress (809 bytes, image/png)
2019-08-30 08:57 UTC, nd101
Details
How it looks in MSO (1.53 KB, image/png)
2019-08-30 08:57 UTC, nd101
Details
MSO where to set the background of the table (84.41 KB, image/png)
2019-09-03 01:10 UTC, nd101
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nd101 2019-08-30 08:55:49 UTC
Description:
In an MSO PowerPoint document, clear table cell (foreground) color. Set table background color to blue. The saved PPTX document opens in Impress and the background color is missing.

Steps to Reproduce:
See description

Actual Results:
Background is clear

Expected Results:
Background is blue


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 nd101 2019-08-30 08:57:01 UTC
Created attachment 153746 [details]
PPTX document
Comment 2 nd101 2019-08-30 08:57:28 UTC
Created attachment 153747 [details]
How it looks in Impress
Comment 3 nd101 2019-08-30 08:57:50 UTC
Created attachment 153748 [details]
How it looks in MSO
Comment 4 Julien Nabet 2019-08-30 09:28:45 UTC
On Win10 with master sources updated yesterday, I could reproduce this.

I noticed this on console:
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 5620
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 3197
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 5620
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 2748
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 5620
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 3197
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 5620
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 2748
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 3197
warn:oox:1368:7584:oox/source/docprop/docprophandler.cxx:322: OOXMLDocPropHandler::startFastElement: unknown element 3197
warn:oox:1368:7584:oox/source/helper/propertyset.cxx:137: PropertySet::implSetPropertyValue - cannot set property "NumberingLevel" com.sun.star.beans.UnknownPropertyException message: NumberingLevel context: class SdStyleSheet
warn:oox:1368:7584:oox/source/helper/propertyset.cxx:137: PropertySet::implSetPropertyValue - cannot set property "IsNumbering" com.sun.star.beans.UnknownPropertyException message: IsNumbering context: class SdStyleSheet
...
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: FromWordArt
warn:tools.datetime:1368:7584:tools/source/datetime/tdate.cxx:102: Date::setDateFromDMY - sure about 0 year? It's not in the calendar.
...
warn:oox.vml:1368:7584:oox/source/vml/vmldrawing.cxx:185: DBG_UNHANDLED_EXCEPTION in void __cdecl oox::vml::Drawing::convertAndInsert(void) const exception: com.sun.star.uno.RuntimeException message: unsatisfied query for interface of type com.sun.star.drawing.XControlShape! context: class SvxShapeText
...
warn:oox:1368:7584:oox/source/helper/propertyset.cxx:137: PropertySet::implSetPropertyValue - cannot set property "DiagonalBLTR" com.sun.star.beans.UnknownPropertyException message: DiagonalBLTR context: class sdr::table::Cell
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: CharHeight
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: FillStyle
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: LineStyle
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: LineWidth
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: ParaAdjust
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: TextAutoGrowHeight
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: TextLeftDistance
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: TextLowerDistance
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: TextRightDistance
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: TextUpperDistance
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: TextVerticalAdjust
warn:svx.uno:1368:7584:svx/source/unodraw/unoshape.cxx:1625: Unknown Property: TextWordWrap
Comment 5 Timur 2019-08-30 14:21:05 UTC Comment hidden (obsolete)
Comment 6 nd101 2019-09-02 00:52:55 UTC Comment hidden (obsolete)
Comment 7 nd101 2019-09-02 02:41:51 UTC
proposed fix:

https://gerrit.libreoffice.org/#/c/78377
Comment 8 Timur 2019-09-02 08:03:01 UTC Comment hidden (obsolete)
Comment 9 Timur 2019-09-02 08:04:03 UTC Comment hidden (obsolete)
Comment 10 nd101 2019-09-03 00:49:29 UTC
(In reply to Timur from comment #8)
> (In reply to nd101 from comment #6)
> > repro step:
> 2 set table cells to "no fill" for 4 cells, table looks clear now
> I guess right click "Shape Fill", I did that. 
> > 3 set table background to green color
> I guess here is a problem, I cannot reproduce creating it. 
> If I do it via right click "Format Shape" and "Fill-Solid Fill", LO opens
> fine. 
> Please explain how exactly you did this.

Did you do it in MS Office? After you clear the cells by setting them to no-fill, you set the background color for the whole table. It is on the same popup where  you set the fill color for the individual cell.
Comment 11 nd101 2019-09-03 01:06:00 UTC
MS Office 2016, click on table, goto menu

Design > Shading > Table Background
Comment 12 nd101 2019-09-03 01:10:29 UTC
Created attachment 153827 [details]
MSO where to set the background of the table
Comment 13 Timur 2019-09-03 14:32:15 UTC
Thank you, I found now. Repro 6.4+
Comment 14 Commit Notification 2019-12-06 14:02:45 UTC
nd101 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4c2254cbebca53c34fa48a1dd90cebe434f24274

tdf#127237 fix table background color in Impress import

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2019-12-06 21:42:54 UTC
nd101 committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/6e873fd94a192f503fd1aff205bdfb5ad465c7ef

tdf#127237 fix table background color in Impress import

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2020-01-20 14:26:31 UTC
A polite ping to nd101:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
Otherwise, Could you please explain what's missing?
Thanks
Comment 17 nd101 2020-09-22 01:46:10 UTC
Yes, it is fixed!
Comment 18 Timur 2020-09-22 06:33:59 UTC
I see that attachment 153746 [details] was created in Chinese? MSO - but I cannot open it in MSO 2016, error "unreadable content". 
It opens in LO as in attachment 153748 [details] "How it looks in MSO".
Comment 19 nd101 2020-09-23 01:51:20 UTC
Yes, the master(In reply to Timur from comment #18)
> I see that attachment 153746 [details] was created in Chinese? MSO - but I
> cannot open it in MSO 2016, error "unreadable content". 
> It opens in LO as in attachment 153748 [details] "How it looks in MSO".

Yes, the latest master with the merged fix opens the document fine. It is odd that your MSO 2016 has the error "unreadable content".