tdf#127237 fix table background color in Impress import

When the background color is set at the table level in PPTX,
instead of at cell level, the background color fails to
show up in Impress.

Change-Id: I2838e5b56e4a2414494ee99c0f8975b7256ac6dc