oox/source/drawingml/table/tablecontext.cxx
@@ -57,6 +57,8 @@ TableContext::onCreateContext( ::sal_Int32 aElementToken, const AttributeList& r
             mrTableProperties.setBandCol( rAttribs.getBool( XML_bandCol, false ) );
         }
         break;
+    case A_TOKEN(solidFill):
+        return new ColorContext(*this, mrTableProperties.getBgColor());
     case A_TOKEN( tableStyle ):         // CT_TableStyle
         {
             std::shared_ptr< TableStyle >& rTableStyle = mrTableProperties.getTableStyle();
