sd/qa/unit/export-tests-ooxml1.cxx
@@ -55,6 +55,7 @@ class SdOOXMLExportTest1 : public SdModelTestBaseXML
 {
 public:
     void testFdo90607();
+    void testTdf127237();
     void testBnc870233_1();
     void testBnc870233_2();
     void testN828390_4();
@@ -93,6 +94,7 @@ public:
     CPPUNIT_TEST_SUITE(SdOOXMLExportTest1);
 
     CPPUNIT_TEST(testFdo90607);
+    CPPUNIT_TEST(testTdf127237);
     CPPUNIT_TEST(testBnc870233_1);
     CPPUNIT_TEST(testBnc870233_2);
     CPPUNIT_TEST(testN828390_4);
@@ -178,6 +180,26 @@ void checkFontAttributes( const SdrTextObj* pObj, ItemValue nVal)
     }
 }
 
+}
+
+void SdOOXMLExportTest1::testTdf127237()
+{
+    sd::DrawDocShellRef xDocShRef = loadURL( m_directories.getURLFromSrc("/sd/qa/unit/data/pptx/tdf127237.pptx"), PPTX );
+    xDocShRef = saveAndReload(xDocShRef.get(), ODP);
+
+    const SdrPage* pPage = GetPage(1, xDocShRef);
+    CPPUNIT_ASSERT(pPage != nullptr);
+
+    sdr::table::SdrTableObj *pTableObj = dynamic_cast<sdr::table::SdrTableObj*>(pPage->GetObj(0));
+    CPPUNIT_ASSERT(pTableObj != nullptr);
+    uno::Reference< table::XCellRange > xTable(pTableObj->getTable(), uno::UNO_QUERY_THROW);
+
+    sal_Int32 nFillColor = 0;
+    uno::Reference< beans::XPropertySet > xCell(xTable->getCellByPosition(0, 0), uno::UNO_QUERY_THROW);
+    xCell->getPropertyValue("FillColor") >>= nFillColor;
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(0x0070C0), nFillColor);
+
+    xDocShRef->DoClose();
 }
 
 void SdOOXMLExportTest1::testBnc870233_1()
